Provide a fallback if slaves don't list the . entry

If a slave doesn't (or can't) emit an UDSEntry for the "." entry, we do it in the
SlaveBase base class.

BUG: 366795
REVIEW: 128796